--- a/DAQ-Master2.0.ioc
+++ b/DAQ-Master2.0.ioc
@@ -46,11 +46,13 @@ Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN (PH0)
 Mcu.Pin1=PH1-OSC_OUT (PH1)
 Mcu.Pin10=PD2
-Mcu.Pin11=PD6
-Mcu.Pin12=PB8
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_FATFS_VS_SDIO
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin11=PD3
+Mcu.Pin12=PD5
+Mcu.Pin13=PD6
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_FATFS_VS_SDIO
+Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PC8
@@ -59,7 +61,7 @@ Mcu.Pin6=PC10
 Mcu.Pin7=PC11
 Mcu.Pin8=PC12
 Mcu.Pin9=PD0
-Mcu.PinsNb=16
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=_DLC_,8
 Mcu.UserName=STM32H743VITx
@@ -123,7 +125,18 @@ PD2.GPIOParameters=GPIO_PuPd
 PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDMMC1_CMD
-PD6.GPIOParameters=PinState
+PD3.GPIOParameters=PinState,GPIO_Label
+PD3.GPIO_Label=CAN_LED
+PD3.Locked=true
+PD3.PinState=GPIO_PIN_SET
+PD3.Signal=GPIO_Output
+PD5.GPIOParameters=PinState,GPIO_Label
+PD5.GPIO_Label=DATALOG_LED
+PD5.Locked=true
+PD5.PinState=GPIO_PIN_SET
+PD5.Signal=GPIO_Output
+PD6.GPIOParameters=PinState,GPIO_Label
+PD6.GPIO_Label=ACCEL_LED
 PD6.Locked=true
 PD6.PinState=GPIO_PIN_SET
 PD6.Signal=GPIO_Output
@@ -148,7 +161,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
