--- a/DAQ-Master2.0.ioc
+++ b/DAQ-Master2.0.ioc
@@ -2,7 +2,7 @@
 FATFS.BSP.number=1
 FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS
 FATFS.USE_DMA_CODE_SD=1
-FATFS._MAX_SS=4096
+FATFS._MAX_SS=512
 FATFS._USE_LFN=1
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
@@ -192,7 +192,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_IWDG1_Init-IWDG1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_FATFS_Init-FATFS-false-HAL-false,7-MX_IWDG1_Init-IWDG1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL2
 RCC.ADCFreq_Value=80000000
 RCC.AHB12Freq_Value=200000000
